--- a/src/components/play-detail/PlayReview.scss
+++ b/src/components/play-detail/PlayReview.scss
@@ -21,4 +21,17 @@
   .play-review-container {
     margin: 30px 0;
   }
+
+  .play-review-container .play-review-list {
+    padding: 10px 30px 0 30px;
+  }
+
+  .play-review-not-exsist {
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+  }
 }
