--- a/src/pages/play-detail/PlayDetail.scss
+++ b/src/pages/play-detail/PlayDetail.scss
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     width: 75%;
     margin: 50px auto;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
   }
 
   .play-detail-main-box {
@@ -28,13 +28,13 @@ body {
   }
 }
 
-@media (min-width: 481px) and (max-width: 1129px) {
+@media (min-width: 480px) and (max-width: 1130px) {
   .play-detail-container {
     display: flex;
     flex-direction: column;
     width: 90%;
     margin: 50px auto;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
   }
 
   .play-detail-main-box {
@@ -60,7 +60,7 @@ body {
     flex-direction: column;
     margin: 30px auto;
     padding: 0 15px;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
     width: 90%;
   }
 
