--- a/src/components/board/BoardHeader.scss
+++ b/src/components/board/BoardHeader.scss
@@ -7,7 +7,7 @@
 
   h2 {
     margin: 0;
-    padding: 10px;
+    padding: 10px 0;
     font-size: 48px;
     font-weight: bold;
   }
@@ -31,8 +31,8 @@
   }
   hr {
     border: 0;
-    height: 3px;
-    background-color: rgb(100, 100, 100);
+    height: 2px;
+    background-color: #b8b8b8;
   }
 }
 
