Design: 게시판 상세 페이지 박스 디자인 변경

--- a/src/components/board-pr/PRBoardPost.scss
+++ b/src/components/board-pr/PRBoardPost.scss
@@ -2,6 +2,7 @@
   background-color: rgba(255, 255, 255, 0.653);
   border-radius: 52px;
   overflow: hidden;
+  box-shadow: 2px 1px 6px #00000016;
 
   .post-header {
     background-color: #ffb400;
