--- a/src/components/board/CommentForm.scss
+++ b/src/components/board/CommentForm.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 18px 14px;
   border-radius: 20px;
+  box-shadow: 1px 1px 4px #00000016;
 
   .flex-box {
     display: flex;
