--- a/src/components/board-free/FreeBoardPost.scss
+++ b/src/components/board-free/FreeBoardPost.scss
@@ -4,6 +4,7 @@
   border-radius: 40px;
   display: flex;
   flex-direction: column;
+  box-shadow: 2px 1px 6px #00000016;
 
   .title {
     font-size: 34px;
