--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -2,6 +2,7 @@
 .main-container {
     display: flex;
     flex-direction: column;
+    border-top: 0.5px solid black;
 }
 .banner-container {
     display: flex;
@@ -9,6 +10,7 @@
     height: 300px;
     background-repeat: repeat;
     background-size: contain;
+    border-top: 0.5px solid black;
 }
 .best-container {
     display: flex;
@@ -16,7 +18,7 @@
     align-items: center;
     justify-content: center;
     height: 500px;
-    background-color: #202020;
+    background-color: #282828;
 }
 .preferred-region-container {
     display: flex;
@@ -25,10 +27,12 @@
     justify-content: space-around;
     height: 550px;
     background-color: #282828;
+    border-top: 0.5px solid black;
 }
 .publicity-container {
     height: 500px;
-    background: linear-gradient(to bottom, #202020 90%, #282828 10%);
+    background-color: #202020;
+    border-top: 0.5px solid black;
 }
 .rating-container {
     display: flex;
@@ -43,6 +47,7 @@
     justify-content: center;
     height: 500px;
     background: linear-gradient(to bottom, #202020 90%, #282828 10%);
+    border-top: 0.5px solid black;
 }
 .child-container {  
     display: flex;
@@ -52,12 +57,14 @@
     height: 500px;
     padding-bottom: 20px;
     background-color: #282828;
+    border-top: 0.5px solid black;
 }
 .theater-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 600px;
+    height: 550px;
     background-color: #202020;
+    border-top: 0.5px solid black;
 }
