Feat: 게시글 edit, delete 관련 기능 추가 - edit 페이지 분리 - edit API fetch url 연결(기능은 미완) - delete API 연결

--- a/src/components/board/PostTop.scss
+++ b/src/components/board/PostTop.scss
@@ -26,9 +26,11 @@
     height: 24px;
     align-items: flex-start;
     font-size: 18px;
-    .share-icon {
-      margin-right: 14px;
+    > * {
+      margin-left: 10px;
+      cursor: pointer;
     }
+
     .comments-icon {
       display: flex;
     }
