--- a/src/components/play-detail/PlayDetailTop.scss
+++ b/src/components/play-detail/PlayDetailTop.scss
@@ -1,32 +1,3 @@
-$tooltip-background-color: #ffffff;
-$tooltip-border-color: #ffb400;
-$tooltip-text-color: #282828;
-$tooltip-font-size: 12px;
-$tooltip-font-weight: 500;
-$tooltip-letter-spacing: -0.25px;
-$tooltip-margin-top: 6.8px;
-$tooltip-padding-y: 5px;
-$tooltip-padding-x: 11px;
-$tooltip-position: relative;
-$tooltip-width: fit-content;
-$tooltip-z-index: 100;
-
-@mixin tooltip {
-  background-color: $tooltip-background-color;
-  border: $tooltip-border-color solid 1px;
-  border-radius: 5px;
-  color: $tooltip-text-color;
-  font-size: $tooltip-font-size;
-  font-weight: $tooltip-font-weight;
-  height: auto;
-  letter-spacing: $tooltip-letter-spacing;
-  margin-top: $tooltip-margin-top;
-  padding: $tooltip-padding-y $tooltip-padding-x;
-  position: $tooltip-position;
-  width: $tooltip-width;
-  z-index: $tooltip-z-index;
-}
-
 @media (min-width: 1130px) {
   .play-detail-top-container {
     .play-detail-top {
@@ -34,7 +5,6 @@ $tooltip-z-index: 100;
 
       .play-poster {
         display: flex;
-        // justify-content: center;
 
         .poster-box {
           width: 350px;
@@ -171,6 +141,9 @@ $tooltip-z-index: 100;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          padding-right: 20px;
+          position: relative;
+          bottom: 12px;
 
           .SNS-img-box {
             height: 50px;
@@ -182,17 +155,8 @@ $tooltip-z-index: 100;
               height: 30px;
             }
           }
-
-          .share-tooltip {
-            @include tooltip;
-          }
         }
       }
-
-      // .tooltips {
-      //   position: absolute;
-      //   top: 91%;
-      // }
 
       .another-btn {
         display: flex;
@@ -208,10 +172,6 @@ $tooltip-z-index: 100;
           display: flex;
           flex-direction: column;
           width: 191px;
-        }
-
-        .end-show-tooltip {
-          @include tooltip;
         }
       }
     }
@@ -367,6 +327,9 @@ $tooltip-z-index: 100;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          padding-right: 20px;
+          position: relative;
+          bottom: 12px;
 
           .SNS-img-box {
             height: 50px;
@@ -377,10 +340,6 @@ $tooltip-z-index: 100;
               width: 30px;
               height: 30px;
             }
-          }
-
-          .share-tooltip {
-            @include tooltip;
           }
         }
       }
@@ -395,11 +354,6 @@ $tooltip-z-index: 100;
           // padding: 0;
           margin-bottom: 15px;
           height: 60px;
-        }
-
-        .end-show-tooltip {
-          @include tooltip;
-          top: 10px;
         }
       }
     }
@@ -553,6 +507,7 @@ $tooltip-z-index: 100;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          padding-right: 20px;
 
           .SNS-img-box {
             height: 50px;
@@ -563,10 +518,6 @@ $tooltip-z-index: 100;
               width: 30px;
               height: 30px;
             }
-          }
-
-          .share-tooltip {
-            @include tooltip;
           }
         }
       }
@@ -595,12 +546,6 @@ $tooltip-z-index: 100;
           display: flex;
           flex-direction: column;
           width: 180px;
-        }
-
-        .end-show-tooltip {
-          @include tooltip;
-          top: 171%;
-          position: absolute;
         }
       }
     }
@@ -767,15 +712,6 @@ $tooltip-z-index: 100;
               height: 30px;
             }
           }
-
-          .share-tooltip {
-            @include tooltip;
-          }
-
-          .share-option-text {
-            display: flex;
-            flex-wrap: wrap;
-          }
         }
       }
 
@@ -797,12 +733,6 @@ $tooltip-z-index: 100;
           p {
             font-size: 15px;
           }
-        }
-
-        .end-show-tooltip {
-          @include tooltip;
-          top: 105%;
-          position: absolute;
         }
       }
     }
