--- a/src/pages/user/SignUp_In.scss
+++ b/src/pages/user/SignUp_In.scss
@@ -1,24 +1,27 @@
 .signupInContainer {
   font-family: "Noto Sans KR";
   width: 100%;
-  
-  .signup-title {
 
+  .signup-title {
     font-size: 50px;
     font-weight: 900;
-    color: #FFB400;
+    color: #ffb400;
     text-align: center;
   }
+
   .signup-description {
     font-weight: 500;
     margin-top: 20px;
     text-align: center;
   }
+
+  .social-buttons {
+    display: flex;
+  }
 }
 
 .inner {
   max-width: 860px;
-  margin: 0 auto; 
+  margin: 0 auto;
   position: relative;
 }
-
