--- a/src/components/mypage/MemberInfo.scss
+++ b/src/components/mypage/MemberInfo.scss
@@ -14,13 +14,41 @@
   align-items: center;
   gap: 28px;
   margin: 40px 0 0 50px;
+
+  .profile-photo {
+    width: 112px;
+    height: 112px;
+    background-color: #d3d3d3;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+
+    input {
+      display: none;
+    }
+
+    .profile-edit {
+      width: 100%;
+      height: 100%;
+      background-color: #0000006e;
+      position: absolute;
+      align-items: center;
+      display: flex;
+      cursor: pointer;
+
+      .icon {
+        margin: 0 auto;
+      }
+    }
+  }
 }
-.profile-photo {
-  width: 112px;
-  height: 112px;
-  background-color: #d3d3d3;
-  border-radius: 50%;
-}
+
 .profile-nickname {
   display: flex;
   justify-content: center;
@@ -67,6 +95,10 @@
   padding: 20px 0;
   gap: 40px;
   border-bottom: 0.5px dotted black;
+
+  * {
+    line-height: 1;
+  }
 }
 .member-preferred-region-box {
   padding: 20px 0;
