feat: 404, 403 페이지 제작, 리뷰 CRUD, 있으면 편리한 기능 추가, 유저 로그인 정보 App.js에서 useContext 훅 사용하여 내려주기 등 작업

--- a/src/components/play-list/calendar-material/PlayListCalendar.scss
+++ b/src/components/play-list/calendar-material/PlayListCalendar.scss
@@ -1,3 +1,96 @@
+@mixin full-calendar-custom {
+  // 캘린더 전체 사이즈 조정
+  .fc {
+    width: 100%;
+    background-color: #ffffff;
+    // min-height: 1500px;
+  }
+
+  // toolbar container
+  .fc .fc-toolbar.fc-header-toolbar {
+    margin: 0;
+    padding: 0 40px;
+    background-color: #ffb400;
+    height: 63px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 29px;
+    color: white;
+    border-radius: 20px 20px 0px 0px;
+  }
+
+  // toolbar 버튼
+  .fc .fc-button-primary {
+    background-color: transparent;
+    border: none;
+
+    span {
+      font-weight: 500;
+      font-size: 28px;
+    }
+
+    :hover {
+      background-color: transparent;
+    }
+  }
+
+  // 날짜
+  .fc-day {
+    cursor: pointer;
+  }
+
+  // 요일 부분
+  .fc-theme-standard th {
+    height: 32px;
+    padding-top: 3.5px;
+    background: #e5edff;
+    border: 1px solid #dddee0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #7b7b7b;
+  }
+
+  // 오늘 날짜 배경색
+  .fc .fc-daygrid-day.fc-day-today {
+    background-color: #fff8bd;
+    color: #356eff;
+  }
+
+  // 날짜별 그리드
+  .fc .fc-daygrid-day-frame {
+    padding: 10px;
+  }
+
+  // 날짜  ex) 2일
+  .fc .fc-daygrid-day-top {
+    flex-direction: row;
+    margin-bottom: 3px;
+  }
+
+  // 각 이벤트 요소
+  .fc-event {
+    cursor: pointer;
+    padding: 5px 8px;
+    margin-bottom: 5px;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 14px;
+    background-color: #ffb3007e;
+    border: #7b7b7b;
+    color: black;
+  }
+
+  .fc-event-title {
+    color: black;
+    font-weight: bold;
+  }
+
+  .fc .fc-button .fc-icon {
+    vertical-align: baseline;
+  }
+}
+
 @media (min-width: 1130px) {
   .play-list-calendar-container {
     .calendar-guide-text {
@@ -9,6 +102,10 @@
       svg {
         margin-right: 10px;
       }
+    }
+
+    .play-list-calendar-box {
+      @include full-calendar-custom();
     }
   }
 }
@@ -29,6 +126,10 @@
         margin-right: 10px;
       }
     }
+
+    .play-list-calendar-box {
+      @include full-calendar-custom();
+    }
   }
 }
 
@@ -47,6 +148,10 @@
       svg {
         margin-right: 10px;
       }
+    }
+
+    .play-list-calendar-box {
+      @include full-calendar-custom();
     }
   }
 }
