--- a/src/components/play-detail/TheaterLocation.scss
+++ b/src/components/play-detail/TheaterLocation.scss
@@ -1,4 +1,4 @@
-.kakao-map-container {
+.play-detail-kakao-map-container {
   margin: 30px 0;
 
   h3 {
@@ -6,7 +6,7 @@
     font-size: 22px;
   }
 
-  .kakao-map {
+  .play-detail-kakao-map {
     width: 100%;
     height: 600px;
   }
