--- a/src/components/mypage/MyPickList.scss
+++ b/src/components/mypage/MyPickList.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .my-pick-list-container {
   display: flex;
   flex-direction: column;
@@ -6,26 +8,89 @@
   h1 {
     font-size: 24px;
   }
-}
-.my-pick-list-header {
+
+  .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 800px;
     border-bottom: 4px solid #ccc;
     padding-bottom: 4px;
-}
-.my-pick-list-content-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 800px;
-  height: 580px;
-}
-.my-pick-list-content {
-  width: 360px;
-  height: 168px;
-  border: 3px solid #ccc;
-  border-radius: 10px;
+  }
+
+  .body {
+    height: 582px;
+    margin-top: 20px;
+
+    .content-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      width: 800px;
+    }
+
+    .content {
+      width: 380px;
+      height: 168px;
+      border: 3px solid #ccc;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      display: flex;
+      align-items: flex-start;
+
+      .play-img-container {
+        width: 100px;
+        height: 144px;
+        border-radius: 4px;
+        overflow: hidden;
+        margin: 12px 0;
+        flex-shrink: 0;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .play-info {
+        width: 100%;
+        height: 142px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin: 12px 14px;
+        flex-grow: 0;
+        overflow: hidden;
+
+        .title {
+          @include ellipsis(2, 22px);
+          margin: 4px 0 10px;
+        }
+
+        h3 {
+          margin: 0;
+          font-size: 16px;
+        }
+
+        p {
+          padding: 1.5px 0;
+          font-size: 13px;
+        }
+      }
+
+      .reservation-btn {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+        flex: 1;
+
+        button p {
+          font-weight: 700;
+          font-family: "Noto Sans KR";
+        }
+      }
+    }
+  }
 }
