fix: 연극 검색 결과 페이지 alert, 사진 넘치는 현상 fix, 리뷰에서 삭제 시 401, 403 오류 처리 로직 추가

--- a/src/components/play-detail/play-review-metrials/AverageRatingBox.scss
+++ b/src/components/play-detail/play-review-metrials/AverageRatingBox.scss
@@ -26,6 +26,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 65px;
+      position: relative;
+      top: 51px;
     }
 
     .review-button button {
