--- a/src/components/mypage/MyPlayReview.scss
+++ b/src/components/mypage/MyPlayReview.scss
@@ -1,17 +1,22 @@
 .my-play-review-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 48px 0 0 0;
-    h1 {
-      font-size: 24px;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 48px 0 0 0;
+  h1 {
+    font-size: 24px;
+  }
+
+  .link:hover {
+    color: #0062b2;
+    text-decoration: underline;
+  }
 }
 .my-play-review-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 800px;
-    border-bottom: 4px solid #ccc;
-    padding-bottom: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 800px;
+  border-bottom: 4px solid #ccc;
+  padding-bottom: 4px;
 }
