Feat: 상태 관리 추가 및 API 연결 - 상태별 컴포넌트 추가(빈데이터, 에러) - 마이페이지, 홍보, 커뮤니티에 상태별 로직 추가(loading, empty, error) - 마이페이지 찜, 리뷰, 홍보, 커뮤 api 연결(get, delete)

--- a/src/components/board/BoardHeader.scss
+++ b/src/components/board/BoardHeader.scss
@@ -3,14 +3,15 @@
 
   .content {
     padding: 0 10px;
+
+    h2 {
+      margin: 0;
+      padding: 10px 0 30px;
+      font-size: 48px;
+      font-weight: bold;
+    }
   }
 
-  h2 {
-    margin: 0;
-    padding: 10px 0;
-    font-size: 48px;
-    font-weight: bold;
-  }
   .flex-box {
     display: flex;
     justify-content: space-between;
