--- a/src/components/mypage/MemberDeletion.scss
+++ b/src/components/mypage/MemberDeletion.scss
@@ -2,13 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 48px 0 0 0;
-  h1 {
-    padding-bottom: 20px;
-    font-size: 24px;
+  height: 780px;
+  margin: 10px 0;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 800px;
+    height: 40px;
     border-bottom: 4px solid #ccc;
+    padding: 34px 0 16px;
+    h1 {
+      margin: 0;
+    }
   }
+
   h4 {
     color: white;
   }
