--- a/src/components/mypage/MemberInfo.scss
+++ b/src/components/mypage/MemberInfo.scss
@@ -1,10 +1,21 @@
 .member-info-container {
-  h1 {
-    margin: 64px 0 0 50px;
-    padding-bottom: 20px;
-    font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 780px;
+  margin: 10px 0;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 800px;
+    height: 40px;
     border-bottom: 4px solid #ccc;
+    padding: 34px 0 16px;
+    h1 {
+      margin: 0;
+    }
   }
 
   .member-info-profile-box {
@@ -13,7 +24,7 @@
     width: 800px;
     align-items: center;
     gap: 28px;
-    margin: 40px 0 0 50px;
+    padding: 40px 0;
 
     .profile-photo {
       width: 112px;
@@ -67,13 +78,24 @@
     display: flex;
     flex-direction: column;
     width: 800px;
-    margin: 40px 0 0 50px;
     p {
       font-weight: 600;
     }
     border-top: 0.5px solid black;
     border-bottom: 0.5px solid black;
+
+    .member-nickname-box {
+      .textfield * {
+        line-height: 1;
+      }
+      display: flex;
+      align-items: center;
+      padding: 20px 0;
+      gap: 40px;
+      border-bottom: 0.5px dotted black;
+    }
   }
+
   .member-id-box {
     display: flex;
     align-items: center;
@@ -81,6 +103,7 @@
     gap: 20px;
     border-bottom: 0.5px dotted black;
   }
+
   .member-id {
     display: flex;
     align-items: center;
@@ -90,17 +113,7 @@
     border-radius: 4px;
     padding-left: 14px;
   }
-  .member-nickname-box {
-    display: flex;
-    align-items: center;
-    padding: 20px 0;
-    gap: 40px;
-    border-bottom: 0.5px dotted black;
 
-    span {
-      line-height: 1;
-    }
-  }
   .member-preferred-region-box {
     padding: 20px 0;
   }
