--- a/src/components/mypage/MyPickList.scss
+++ b/src/components/mypage/MyPickList.scss
@@ -4,23 +4,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 48px 0 0 0;
-  h1 {
-    font-size: 24px;
-  }
+  height: 780px;
+  margin: 10px 0;
 
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 800px;
+    height: 40px;
     border-bottom: 4px solid #ccc;
-    padding-bottom: 4px;
+    padding: 34px 0 16px;
+    h1 {
+      margin: 0;
+    }
   }
 
   .body {
-    height: 582px;
+    width: 800px;
+    height: 660px;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     .content-container {
       display: flex;
@@ -28,6 +35,13 @@
       justify-content: space-between;
       align-items: flex-start;
       width: 800px;
+      height: 100%;
+
+      &.loading {
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+      }
     }
 
     .content {
@@ -67,6 +81,10 @@
           @include ellipsis(2, 22px);
           margin: 4px 0 10px;
           width: fit-content;
+        }
+
+        .place {
+          @include ellipsis(1, 20px);
         }
 
         h3 {
